<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewPager.screens.Abilities"
    android:background="@color/gray"
    >


    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/abilities_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abilities"
                android:textSize="24sp"
                android:textColor="@color/myDark"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="106dp"
                tools:src="@tools:sample/avatars" />
        </TableRow>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_skin0"
            android:layout_marginTop="20dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/white"
            android:padding="10dp"
            >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/img_passive"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/passive" />

            <TextView
                android:id="@+id/desc_passive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/textview"
                android:background="@color/white"
                android:textColor="@color/myDark" />
        </TableRow>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_skin1"
            android:layout_marginTop="30dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/white"

            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:id="@+id/img_Q"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/ability_q" />

                <TextView
                    android:id="@+id/desc_Q"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/textview"
                    android:textColor="@color/myDark" />

            </TableRow>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/card_skin2"
            android:layout_marginTop="30dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/white"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:id="@+id/img_W"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/ability_w" />

                <TextView
                    android:id="@+id/desc_W"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/textview"
                    android:textColor="@color/myDark" />

            </TableRow>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_skin3"
            android:layout_marginTop="30dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/white"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:id="@+id/img_E"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/ability_e" />

                <TextView
                    android:id="@+id/desc_E"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/textview"
                    android:textColor="@color/myDark" />

            </TableRow>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_skin4"
            android:layout_marginTop="30dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/white"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:id="@+id/img_R"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/ability_r" />

                <TextView
                    android:id="@+id/desc_R"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/textview"
                    android:textColor="@color/myDark" />

            </TableRow>
        </androidx.cardview.widget.CardView>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>